# tap-olo-omnivore

./: LICENSE  README.md  pyproject.toml
tap_olo_omnivore/: __init__.py  __main__.py  client.py  pagination.py  tap.py
tap_olo_omnivore/schemas/: discounts.json  employees.json  locations.json  menu_categories.json  menu_category_types.json  menu_item_categories.json  menu_item_option_sets.json  menu_item_price_levels.json  menu_items.json  menu_modifier_categories.json  menu_modifier_group_modifiers.json  menu_modifier_groups.json  menu_modifier_option_sets.json  menu_modifier_price_levels.json  menu_modifiers.json  order_types.json  out_of_stock_menu_items.json  out_of_stock_menu_modifiers.json  revenue_centers.json  tables.json  tender_types.json  ticket_discounts.json  ticket_item_discounts.json  ticket_item_modifiers.json  ticket_items.json  ticket_payments.json  ticket_service_charges.json  tickets.json  void_types.json  voided_ticket_item_modifiers.json  voided_ticket_items.json
tap_olo_omnivore/streams/: discounts.py  employees.py  locations.py  menu_categories.py  menu_category_types.py  menu_item_categories.py  menu_item_option_sets.py  menu_item_price_levels.py  menu_items.py  menu_modifier_categories.py  menu_modifier_group_modifiers.py  menu_modifier_groups.py  menu_modifier_option_sets.py  menu_modifier_price_levels.py  menu_modifiers.py  order_types.py  out_of_stock_menu_items.py  out_of_stock_menu_modifiers.py  revenue_centers.py  tables.py  tender_types.py  ticket_discounts.py  ticket_item_discounts.py  ticket_item_modifiers.py  ticket_items.py  ticket_payments.py  ticket_service_charges.py  tickets.py  void_types.py  voided_ticket_item_modifiers.py  voided_ticket_items.py
tests/: __init__.py  test_core.py
